grammar.js
    module: $ =>
      seq(
        optional($.version_declaration),
        choice($._library_module, $._main_module)
      ),
    _library_module: $ => seq($.module_declaration, $._prolog),
    _main_module: $ => seq(optional($._prolog), $._query_body),
    _expr: $ => choice( // statement like expressions all prec 2
      $._primary_expr,
      $.flwor_expr,
     $.quantified_expr,
     $.switch_expr,
     $.if_expr,
     $.typeswitch_expr,
     $.try_catch_expr,
    $.or_expr, // 83             prec: 3
    $.and_expr, // 84            prec: 4
    $.comparison_expr, // 85     prec: 5
    $.string_concat_expr, // 86  prec: 6
    $.range_expr, // 87          prec: 7
    $.additive_expr, // 88       prec: 8
    $.multiplicative_expr, // 89 prec: 9
    $.union_expr, // 90          prec: 10 
    $.intersect_except_expr,//91 prec: 11
    $.instance_of_expr, // 92    prec: 12
    $.treat_expr, // 93          prec: 13
    $.castable_expr, // 94       prec: 14
    $.cast_expr, // 95           prec: 15
    $.arrow_expr, // 96          prec: 16
    $.unary_expr, //  97         prec: 17 '-' '+' arithmetic prefix right to left
    $.bang_expr, //107           prec: 18
    $.path_expr, //108           prec: 19   '/' '//'  not relative path?
      //  $.predicate //124        prec: 20 @primary postfix predicate '[' ']'
      //  $.postfix_lookup //125   prec: 20 @primary postfix lookup   '?'
      //  $.unary_lookup,// 181    prec: 21 @primary unary lookup
      //seq($._primary_expr, optional( $._postfix_expr )) 
    ),
    // 3.1 Primary Expressions
    _primary_expr: $ => prec.left(PREC.primary,seq(choice(
      $._literal, // 57
      $.var_ref, // 59
      $.parenthesized_expr, // 133
      $.context_item_expr, // 134
      $.ordered_expr, // 135
      $.unordered_expr, // 136
      $.function_call, // 137
      $._direct_constructor,  // 141 node constructors 140 
      $._computed_constructor, // 155 // node constructors 140
      $.named_function_ref,   // 168  function item 167
      $.inline_function_expr, // 169 function item 167
      $.map_constructor, // 170
      $.square_array_constructor, // 175 array_constructor 174
      $.curly_array_constructor, // 176  array_constructor 174
      $.string_constructor, // 177
      $.unary_lookup // 181
     ), optional($._postfix_expr))),
    // 3.1.1 Literals
    string_literal: $ => choice(
        seq( '"', repeat(choice($.predefined_entity_ref, $.char_ref, $.escape_quote, /[^"&]/)),'"'),
        seq( "'", repeat(choice($.predefined_entity_ref, $.char_ref, $.escape_apos, /[^'&]/)),"'")),
    var_ref: $ => seq('$',  $.EQName ),
    // note: a dynamic function call can consist of _postfix_expr [ var_ref + argument_list ]
    // 3.1.3 Parenthesized Expressions
    parenthesized_expr: $ =>  seq('(', commaSep($._expr), ')'), // 133
    //3.1.4 Context Item Expression TODO not like spec
    context_item_expr: $ => prec.left(seq('.', optional( $.path_expr))),
    //3.1.5 Static Function Calls
    function_call: $ => prec.left(25,seq( 
      choice( field( 'dynamic', $.var_ref),field('static', $.EQName)),
      $.argument_list)), // 137 spec deviation added $var_ref
    //function_call: $ => prec.left(25 ,seq( $.EQName, $.argument_list)), // 137
    // 3.1.6 Named Function References
    named_function_ref: $ =>
      seq(
        field('function_name', $.EQName),
        field('delimiter', '#'),
        field('signature', $.integer_literal)
      ),
    // 3.1.7 Inline Function Expr
    // https://github.com/tree-sitter/tree-sitter/blob/master/docs/section-4-syntax-highlighting.md
    inline_function_expr: $ =>
      seq(
        // optional( $.annotation ),
        'function',
        field('parameters', $.param_list),
        field('result_type', optional(seq('as', $.sequence_type))),
        field('body', $.enclosed_expr)
      ), // 169
    param_list: $ => seq('(', commaSep($.param), ')'),
    param: $ =>
      seq(
        field('param_name', seq('$', $.EQName)),
        optional(field('param_type', seq('as', $.sequence_type)))
      ),
    // 3.1.8 Enclosed Expressions
    enclosed_expr: $ => prec(1, seq('{', commaSep($._expr), '}')), // 5
    // 3.2 Postfix Expressions TODO
    //_postfix_expr: $ =>  seq($._primary_expr, optional(repeat1(choice($.predicate, $.argument_list, $.postfix_lookup)))), // 49
    predicate: $ => prec(20, seq( '[', field('filter', $._expr ), ']')), //124
    // 3.2.2 Dynamic Function Calls
    argument_list: $ => prec(1,seq('(', commaSep($.argument), ')')), // 122
    path_expr: $ => prec.left(19, 
      choice(
        seq('/', optional($._relative_path_expr)), //parse-note-leading-lone-slash
        seq( '//', $._relative_path_expr ),  // must have relative_path_expr 
        $._relative_path_expr  // can stand alone
      )
    ),
    _relative_path_expr: $ => prec.left(seq($._step_expr, optional( repeat1 (seq( choice('/', '//'), $._step_expr))))), //109 
    comparison_expr: $ => prec.left(5,seq(field('lhs',$._expr),choice('eq','ne','lt','le','gt','ge','=','!=','<','<=','>','>=','is','<<','>>'),field('rhs',$._expr))),
    instance_of_expr: $ => prec.left(12, seq(
      field('lhs', $._expr),
      seq('instance','of'),
      field('rhs', $.sequence_type))), // 92
    direct_element: $ => choice( 
      seq($.start_tag, repeat(choice($.direct_element, $.element_text)), $.end_tag),
      $.empty_tag ),
    start_tag: $ => seq( '<', $._QName, repeat($.direct_attribute),'>'),
    end_tag: $ => seq('</',  $._QName, '>'),
    char_data: $ => /[^{}<&]+/,
    char_ref: $ => choice( seq('&#', repeat1(/[0-9]/), ';'),seq('&#x', repeat1(/[0-9a-fA-F]/), ';') ),
    predefined_entity_ref: $ => seq('&', choice('lt', 'gt', 'amp', 'quot', 'apos'), ';'),
    escape_apos: $ =>  "''",
    escape_quote: $ => '""',
    // 3.9.3 Computed Constructors TODO make Computed Constructors a supertype
    map_constructor: $ => seq('map',seq('{',commaSep($.map_entry),'}')),//170
    curly_array_constructor: $ =>
      seq(
        'array',
        field('content', $.enclosed_expr)
      ),
    square_array_constructor: $ => seq('[', commaSep($._expr), ']'),
    flwor_expr: $ => prec(2,seq($._initial_clause, optional($._intermediate_clause), $.return_clause)), // 41
    _initial_clause: $ =>
      choice(
        $.for_clause, // 44
        $.let_clause // 48
      ),
    //3.12.2 For Clause
    let_clause: $ => seq('let', commaSep1($.let_binding)),
    let_binding: $ =>
      seq(
        '$',
        field('var_name', $.EQName),
        optional($.type_declaration),
        ':=',
        $._expr
      ),
    _intermediate_clause: $ =>
      repeat1(
        choice(
          $._initial_clause,
          $.where_clause,
          $.group_by_clause,
          $.order_by_clause,
          $.count_clause
        )
      ), // 43',
    // 3.12.4 Window Clause
    //3.12.5 Where Clause
    return_clause: $ => seq('return', $._expr), // 69
    // end flwor
    // ++++++++++++++++++++++++++++++++++++++++++++++++++
    // 3.13 Ordered and Unordered Expressions
    version_declaration: $ =>
      seq('xquery', choice($._encoding, $._version, $._version_encoding), ';'),
    _encoding: $ => seq('encoding', $.string_literal),
    _version: $ => seq('version', $.string_literal),
    _version_encoding: $ => seq($._version, $._encoding),
    //4.2 Module Declaration
    module_declaration: $ =>
      seq(
        'module',
        'namespace',
        field('name', $.NCName),
        '=',
        field('value', $.string_literal),
        ';'
      ), // 5
    // 4.3 Boundary-space Declaration
    schema_import: $ =>
      seq(
        'import',
        'schema',
        optional($.schema_prefix),
        field('uri', $.string_literal),
        optional(seq('at', commaSep1($.string_literal))),
        ';'
      ), // 21
    schema_prefix: $ =>
      choice(
        seq('namespace', $.NCName, '='),
        seq('default', 'element', 'namespace')
      ), //22',
    // 4.12 Module Import // TODO
    module_import: $ =>
      seq(
        'import',
        'module',
        optional(seq('namespace', $.NCName, '=')),
        field('uri', $.string_literal),
        optional(seq('at', commaSep1($.string_literal))),
        ';'
      ),
    //4.13 Namespace Declaration
    namespace_declaration: $ =>
      seq(
        'declare',
        'namespace',
        field('name', $.NCName),
        '=',
        field('uri', $.string_literal),
        ';'
      ), // 24
    //4.14 Default Namespace Declaration
    default_namespace_declaration: $ =>
      seq(
        'declare',
        'default',
        choice('element', 'function'),
        'namespace',
        field('uri', $.string_literal),
        ';'
      ), // 24

    //4.15 Annotations
    annotation: $ =>
      seq(
        '%',
        field('name', $.EQName),
        field('body', optional(seq('(', commaSep($.string_literal), ')')))
      ), // 27
    // 4.16 Variable Declaration
    variable_declaration: $ =>
      seq(
        'declare',
        optional(repeat1($.annotation)),
        'variable',
        '$',
        field('var_name', $.EQName),
        field('var_type', optional(seq('as', $.sequence_type))),
        ':=',
        field('var_value', $._expr),
        ';'
      ), // 26
    // 4.17 Context Item Declaration
    context_item_declaration: $ =>
      seq(
        'declare',
        'context',
        'item',
        optional($.type_declaration),
        optional(
          choice(
            seq(':=', field('var_value', $._expr)),
            seq(
              'external',
              optional(seq(':=', field('var_default_value', $._expr)))
            )
          )
        ),
        ';'
      ),

    // 4.18 Function Declaration
    function_declaration: $ =>
      seq(
        'declare',
        optional(repeat1($.annotation)),
        'function',
        field('name', $.EQName),
        field('params', $.param_list),
        field('result', optional(seq('as', $.sequence_type))),
        field('body', choice($.enclosed_expr, 'external')),
        ';'
      ),
    //4.19 Option Declaration
    option_declaration: $ =>
      seq(
        'declare',
        'option',
        field('name', $.EQName),
        field('value', $.string_literal),
        ';'
      ),

    // 2.5.4 SequenceType Syntax
    type_declaration: $ => seq('as', $.sequence_type),
    sequence_type: $ => prec.left(choice($.empty_sequence, $._item)), // 184
    empty_sequence: $ => seq('empty-sequence','(', ')'),
    _item: $ => prec.right(seq($._item_type, optional($.occurrence_indicator))),
    occurrence_indicator: $ => choice('?', '*', '+'), // 185
    atomic_or_union_type: $ => $.EQName, // 187
    any_item: $ => seq('item', '(', ')'),
    any_kind_test: $ => seq('node','(',')'), // 189
    text_test: $ => seq('text', '(',')'), // 191
    comment_test: $ => seq('comment','(',')'), // 192
    namespace_node_test: $ => seq('namespace-node','(',')'), // 193
    element_test: $ =>
    seq(
      'element',
      field('type_params', 
        seq(
          '(',
          optional( 
            $.element_test_params
            ),
          ')'
        ))
    ), // 199
    element_test_params: $ =>
    seq(
      field('param', choice(alias('*', $.wildcard), $.EQName)),
      optional(
        seq(
          ',',
          field(
            'param',
            seq($.EQName, optional(alias('?', $.occurrence_indicator)))
          )
        )
      )),
    // same as element but no nilled test as attributes don't have children
    attribute_test: $ => 
      seq( 'attribute', '(', 
        optional(seq($._attrib_name_or_wildcard, optional(seq( ',', field('type_name', $.EQName))))),
        ')'),// 195
     _attrib_name_or_wildcard: $ => choice( field('attribute_name', $.EQName), alias( '*', $.wildcard )), //196
        /* optional(
          seq(
            field('param', choice(alias('*', $.wildcard), $.EQName)),
            optional(seq(',', field('param', $.EQName)))
          )
        ), */
        /* ')'
      ),  */
    schema_element_test: $ => seq( 'schema-element','(', field('element_name', $.EQName), ')'), //197
    schema_attribute_test: $ => seq( 'schema-attribute', '(', field('attribute_name', $.EQName),')'), //201
    name_test: $ => prec.left(choice($.EQName, $.wildcard)), // TODO 199
    wildcard: $ =>
      choice( '*',
        seq($.NCName, ':*' ),
        seq('*:', $.NCName),
        seq($.braced_uri_literal, '*')
      ), // 120
    any_function_test: $ => seq(
        optional(field('anno', $.annotation)),
        'function', seq('(', '*', ')')), //  // 207
    typed_function_test: $ => seq(
        optional(field('anno', $.annotation)),
         'function', '(', $.signature_params, ')', $.signature_return ),
    any_map_test: $ => seq( 'map','(', '*', ')' ), // 210
    typed_map_test: $ => seq( 'map','(', $.atomic_or_union_type,',', $.sequence_type,')'), // 212
    any_array_test: $ => seq( 'array', '(', '*', ')' ),
    typed_array_test: $ => seq( 'array', '(', $.sequence_type,')' ),
    integer_literal: $ => token(INTEGER),
    decimal_literal: $ => token(DECIMAL),
    double_literal: $ => token(DOUBLE),
    // instances of the grammatical production EQName.
    // EQName is identifier
    _QName: $ =>
      prec.right(
        choice(
          field('unprefixed', $.identifier),
          seq(
            field('prefix', $.identifier),
            token.immediate(':'),
            field('local_part', $.identifier)
          )
        )
      ),
    uri_qualified_name: $ => /Q[{][^}\s]+[}][\w]+/, // TODO too simple?
    identifier: $ => /[_A-Za-z]{1}[\-\w]*/,
    comment: $ => token(/[(]:[^:]*:*([^(:][^:]*:+)*[)]/)
  }
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

function commaSep(rule) {
  return optional(commaSep1(rule));
}
