test/corpus/primary.txt
==================
3.1.1 Literal: numeric integer
==================

12

---

(module 
 (main_module 
  (integer_literal)))

==================
3.1.1 Literal: numeric decimal
==================

.5

---

(module 
 (main_module 
  (decimal_literal)))

==================
3.1.1 Literal: numeric double
==================

51.25E2

---

(module 
 (main_module 
  (double_literal)))


==================
3.1.1 Literal: string double quotes
==================

 "hello world"

---

(module 
 (main_module 
  (string_literal)))

==================
3.1.1 Literal: string single quotes
==================

 'hello world'

---

(module 
 (main_module 
  (string_literal)))

==================
 3.1.1 Literal: string with escaped quotes
==================

"He said, ""I don't like it."""
---

(module 
 (main_module 
  (string_literal 
   (escape_quote)
   (escape_quote)))) 

==================
3.1.1 Literal: string with escape apos
==================

'He said, ''I don''t like it.'''

---

(module 
 (main_module 
  (string_literal 
   (escape_apos) 
   (escape_apos)
   (escape_apos))))

=================
3.1.1 Literal: string with predefined entity ref
==================

"Ben &amp; Jerry&apos;s"

---

(module 
 (main_module 
  (string_literal 
   (predefined_entity_ref) 
   (predefined_entity_ref))))


==================
3.1.1 Literal: string with character reference
==================

"&#8364;99.50"

---

(module 
 (main_module 
  (string_literal 
   (char_ref))))

==================
3.1.2 Variable References: unprefixed
==================

$x

---

(module
 (main_module 
  (var_ref (identifier))))

==================
3.1.2 Variable References: namespace prefix and local part
==================

$example:fruit

---

(module 
 (main_module 
  (var_ref 
    (identifier) 
    (identifier))))

==================
3.1.2 Variable References: URIQualifiedName 	
==================

$Q{http://example.com/ns}invoice

-------------------

(module
  (main_module
    (var_ref
      (uri_qualified_name))))

==================
3.1.3 Parenthesized with constructed empty sequence
==================

()

-------------------

(module 
 (main_module 
  (parenthesized_expr)))

==================
3.1.3 Parenthesized with constructed sequence one item 
==================

( 1 )

---

(module 
 (main_module 
  (parenthesized_expr 
   (integer_literal))))

==================
3.1.3 Parenthesized with constructed sequence comma separated items
==================

( 1, 2 )

---

(module 
 (main_module 
 (parenthesized_expr 
   (integer_literal)
   (integer_literal))))

==================
3.1.3 Parenthesized with embeded sequences 5 items
==================

(10, (1, 2), (), (3, 4))

---

(module 
 (main_module 
 (parenthesized_expr 
   (integer_literal) 
   (parenthesized_expr (integer_literal) (integer_literal)) 
   (parenthesized_expr) 
   (parenthesized_expr (integer_literal) (integer_literal)))))

==================
3.1.4 Context Item Expression
==================

. 

---

(module 
 (main_module 
  (context_item_expr)))

==================
3.1.5 Static Function Call with identifier without arg
==================

array:size()

---

(module 
 (main_module 
 (function_call 
  (identifier) (identifier) 
  (arg_list))))

==================
3.1.5 Static Function Call with identifier with arg
==================

empty( $foo )
  ---

(module 
 (main_module 
   (function_call (identifier) 
    (arg_list (argument (var_ref (identifier)))))))

==================
3.1.5 Static Function Call with identifier with hyphen
==================

hyphen-function( $foo )
---

(module
 (main_module 
  (function_call 
   (identifier)
   (arg_list (var_ref (identifier))))))

==================
3.1.6 Named Function References:
==================

fn:abs#1

---

(module
 (main_module 
   (named_function_ref 
    (identifier) (identifier)
    (integer_literal)))) 

==================
3.1.7 Inline Function Expressions: simple
==================

function()  { 'hello world' }

---

(module 
 (main_module 
  (inline_function_expr (param_list) 
   (enclosed_expr (string_literal))))) 

==================
3.1.7 Inline Function: with args
==================

function ( $param1, $param2 )  {()}

---

(module
  (main_module
    (inline_function_expr
      (param_list
        (parameter
          (var_ref (identifier)))
        (parameter
          (var_ref (identifier))))
      (enclosed_expr
        (parenthesized_expr)))))



==================
3.1.7 Inline Function: with arg type declaration
==================

function( $a as empty-sequence() )  { () }

---

(module
  (main_module
    (inline_function_expr
      (param_list
        (parameter
          (var_ref (identifier))
          (type_declaration
            (sequence_type
              (empty_sequence)))))
      (enclosed_expr
        (parenthesized_expr)))))

==================
3.1.7 Inline Function:  with return type declaration
==================

function( $a as item() ) as item()  { () }

---

(module
  (main_module
    (inline_function_expr
      (param_list
        (parameter
          (var_ref (identifier))
          (type_declaration
            (sequence_type
              (any_item)))))
      (type_declaration
        (sequence_type
          (any_item)))
      (enclosed_expr
        (parenthesized_expr)))))


==================
3.1.7 Inline Function: sequence type occurrance indicator
==================

function( $a as item()* ) as item()+  { () }

---

(module
  (main_module
    (inline_function_expr
      (param_list
        (parameter
          (var_ref (identifier))
          (type_declaration
            (sequence_type
              (any_item)
              (occurrence_indicator)))))
      (type_declaration
        (sequence_type
          (any_item)
          (occurrence_indicator)))
      (enclosed_expr
        (parenthesized_expr)))))


==================
3.1.7 Inline Function: illegal var - uses reserved function name
==================

let $getContent := function( $map as map(*) ) as map(*){()}
return ()

---

 (module
    (main_module
      (flwor_expr
        (let_clause
          (let_binding
            (var_ref
              (identifier))
            (inline_function_expr
              (param_list
                (ERROR
                  (identifier)))
              (type_declaration
                (sequence_type
                  (any_map_test
                    (wildcard))))
              (enclosed_expr
                (parenthesized_expr)))))
        (return_clause
        (parenthesized_expr)))))

==================
3.1.7 Inline Function: illegal function name - uses reserved function name
==================

let $map := function(){}
return ()

---

(module
(ERROR
  (path_expr
    (inline_function_expr
        (param_list)
        (enclosed_expr))))
  (main_module
    (parenthesized_expr)))
